--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,32 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
-@plugin "daisyui" {
-  themes: light --default, dark --prefersdark,
+
+@layer base {
+  body {
+    @apply font-sans; /* keeps Tailwind utilities working */
+    font-family: 'Inter', ui-sans-serif, system-ui;
+  }
 }
+
+
+@plugin "daisyui";
+
+@plugin "daisyui/theme" {
+    name: "dark";
+    default: true;
+    --color-base-100: #0a192f;
+    --color-accent: #64ffda;
+    --primary-content: #ccd6f6;
+}
+
+@plugin "daisyui/theme" {
+    name: "light";
+    default: false;
+    /* light is not default */
+    --color-base-100: #e2e8f0;
+    --color-accent: #020c1b;
+    --primary-content: #570df8;
+    
+}
+
