--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
     name: "dark";
     default: true;
     --color-base-100: #0a192f;
+    --color-base-200: #233554;
     --color-success: #64ffda;
     --color-primary-content: #ccd6f6;
     --color-secondary-content: #8892b0;
